Changes in the testings classes And Mcts pruning implementation